--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,70 @@
 <html>
     <head>
         <title> My Portfilio</title>
+        <style>
+            h1{
+                font-size: 40px;
+                font-family: Roboto;
+                font-weight: normal;
+                color: #760a8bcc;
+                text-align: center;
+            }
+            pp{
+                margin: 0 auto;
+                object-fit: cover;
+            }
+            h2{
+                font-size: 40px;
+                font-family: Roboto;
+                font-weight: normal;
+                color: #760a8bcc;
+                text-align: center;
+            }
+            .bodytext{
+                font-size: 20px;
+                font-family: Roboto;
+                font-weight: normal;
+                color: #000000;
+                text-align: center;
+            }
+            #container{
+                max-width: 720px;
+                margin: 0 auto;
+            }
+       
+        </style>
 
     </head>
     <body>
+        <div id="container">
         <h1>Yochana's Portfolio</h1>
-        <img src="C:\Users\yocha\Desktop\MyWebsite\static\pp.jpg">
+        <img src="http://127.0.0.1:5000/static/pp.jpg"height='300px'>
+        <h2>About me</h2>
+        <p class="bodytext">Hello there! I'm an aspiring Computer Science 
+            student in my pre-final year, specializing in 
+            AI and Robotics,. I am deeply passionate about 
+            the ever-evolving fields of data science and 
+            full-stack web development. My journey in 
+            technology has been marked by a relentless 
+            drive to explore innovative solutions and 
+            create meaningful impact. With a solid 
+            foundation in AI and robotics, I aspire to 
+            harness the power of data to solve complex 
+            problems while also mastering the art of 
+            full-stack web development to build 
+            user-centric, cutting-edge applications. I am 
+            excited to continue learning, collaborating, 
+            and contributing to the dynamic world of 
+            technology. Let's connect and explore new 
+            opportunities together! #DataScience 
+            #WebDevelopment #AI #Robotics #TechEnthusiast
+        </p>
+        <h2>Projects</h2>
+        <p class="bodytext">TO do</p>
+        <div style="text-align: center;">
+            <button>Contact me</button>
+            <p>Copyright 2024,Yochana</p>
+        </div>
+    </div>
     </body>
 </html>
