--- a/templates/home.html
+++ b/templates/home.html
@@ -2,46 +2,16 @@
 <html>
     <head>
         <title> My Portfilio</title>
-        <style>
-            h1{
-                font-size: 40px;
-                font-family: Roboto;
-                font-weight: normal;
-                color: #760a8bcc;
-                text-align: center;
-            }
-            pp{
-                margin: 0 auto;
-                object-fit: cover;
-            }
-            h2{
-                font-size: 40px;
-                font-family: Roboto;
-                font-weight: normal;
-                color: #760a8bcc;
-                text-align: center;
-            }
-            .bodytext{
-                font-size: 20px;
-                font-family: Roboto;
-                font-weight: normal;
-                color: #000000;
-                text-align: center;
-            }
-            #container{
-                max-width: 720px;
-                margin: 0 auto;
-            }
-       
-        </style>
-
+        <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <div id="container">
-        <h1>Yochana's Portfolio</h1>
-        <img src="http://127.0.0.1:5000/static/pp.jpg"height='300px'>
-        <h2>About me</h2>
-        <p class="bodytext">Hello there! I'm an aspiring Computer Science 
+        <div>
+        <h1 class="text-center">Yochana's Portfolio</h1>
+        <img class="img-fluid" id="pp" src="http://127.0.0.1:5000/static/banner.jpg" height='30px'>
+        <h2 class="text-center">About me</h2>
+        <p>Hello there! I'm an aspiring Computer Science 
             student in my pre-final year, specializing in 
             AI and Robotics,. I am deeply passionate about 
             the ever-evolving fields of data science and 
@@ -60,9 +30,9 @@
             opportunities together! #DataScience 
             #WebDevelopment #AI #Robotics #TechEnthusiast
         </p>
-        <h2>Projects</h2>
-        <p class="bodytext">TO do</p>
-        <div style="text-align: center;">
+        <h2 class="text-center">Projects</h2>
+        <p>TO do</p>
+        <div>
             <button>Contact me</button>
             <p>Copyright 2024,Yochana</p>
         </div>
