--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div>
-        <h1 class="text-center">Yochana's Portfolio</h1>
-        <img class="img-fluid" id="pp" src="http://127.0.0.1:5000/static/banner.jpg" height='30px'>
-        <h2 class="text-center">About me</h2>
-        <p>Hello there! I'm an aspiring Computer Science 
+            <h1 class="text-center" mt-2 mb-4>Yochana's Portfolio</h1>
+            <img class="img-fluid" id="pp" src="http://127.0.0.1:5000/static/banner.jpg">
+             <h2 class="text-center" mt-2 mb-4>About me</h2>
+             <p class="lead"> Hello there! I'm an aspiring Computer Science 
             student in my pre-final year, specializing in 
             AI and Robotics,. I am deeply passionate about 
             the ever-evolving fields of data science and 
@@ -29,13 +29,13 @@
             technology. Let's connect and explore new 
             opportunities together! #DataScience 
             #WebDevelopment #AI #Robotics #TechEnthusiast
-        </p>
-        <h2 class="text-center">Projects</h2>
-        <p>TO do</p>
-        <div>
-            <button>Contact me</button>
-            <p>Copyright 2024,Yochana</p>
+            </p>
+            <h2 class="text-center" mt-2 mb-4>Projects</h2>
+            <p>TO do</p>
+            <div class="text-center">
+                <button class="btn btn-primary btn-sm">Contact me</button>
+                <p mt-4>Copyright 2024,Yochana</p>
+            </div>
         </div>
-    </div>
     </body>
 </html>
