--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <div>
+        {% include 'nav.html' %}
+        <div class="container">
             <h1 class="text-center" mt-2 mb-4>Yochana's Portfolio</h1>
             <img class="img-fluid" id="pp" src="http://127.0.0.1:5000/static/banner.jpg">
              <h2 class="text-center" mt-2 mb-4>About me</h2>
