--- a/templates/home.html
+++ b/templates/home.html
@@ -5,42 +5,54 @@
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+
+
     </head>
     <body>
         {% include 'nav.html' %}
+       
         <div class="container">
-            <h1 class="text-center" mt-2 mb-4>Yochana's Portfolio</h1>
-            <img class="img-fluid" id="pp" src="http://127.0.0.1:5000/static/banner.jpg">
+            <h1 class="text-center" mt-2 mb-4>Portfolio</h1>
              <h2 class="text-center" mt-2 mb-4>About me</h2>
-             <p class="lead"> Hello there! I'm an aspiring Computer Science 
-            student in my pre-final year, specializing in 
-            AI and Robotics,. I am deeply passionate about 
-            the ever-evolving fields of data science and 
-            full-stack web development. My journey in 
-            technology has been marked by a relentless 
-            drive to explore innovative solutions and 
-            create meaningful impact. With a solid 
-            foundation in AI and robotics, I aspire to 
-            harness the power of data to solve complex 
-            problems while also mastering the art of 
-            full-stack web development to build 
-            user-centric, cutting-edge applications. I am 
-            excited to continue learning, collaborating, 
-            and contributing to the dynamic world of 
-            technology. Let's connect and explore new 
-            opportunities together! #DataScience 
-            #WebDevelopment #AI #Robotics #TechEnthusiast
+             <div class="row" style="margin-bottom: 16px;">
+                <div class="col-9">
+             <p class="lead"> Aspiring Computer Science student specializing in AI and Robotics, passionate about data science and full-stack web development. I aim to solve complex problems with AI while building user-centric applications. Excited to collaborate and contribute to the tech world! #AI #DataScience #WebDevelopment #Robotics 
             </p>
+            </div>
+        
+            <div class="col-3">
+                <img src="http://127.0.0.1:5000/static/picture.jpeg" style="height: 320px;border-radius: 4px;">
+            </div>
+            <div>
+                <h2 class="text-center" mt-2 mb-4>Skills</h2>
+                <p>{% for skill in Skillset %}
+                    
+                    {%include "skills.html" %}
+    
+                    {% endfor %}
+                </p>
+            </div>
             <h2 class="text-center" mt-2 mb-4>Projects</h2>
             <p>{% for project in Projects %}
                 {%include "projects.html" %}
 
                 {% endfor %}
             </p>
+            <div>
+                <h2 class="text-center" mt-2 mb-4>Education</h2>
+                <p>{% for education in Education %}
+                    {%include "education.html" %}
+                    {% endfor %}
+                </p>
+            </div>
+            <div></div>
+                <h2 class="text-center" mt-2 mb-4>Certifications</h2>
+            </div>
             <div class="text-center">
-                <button class="btn btn-primary btn-sm">Contact me</button>
-                <p mt-4>Copyright 2024,Yochana</p>
+                <a class="btn btn-primary btn-sm" href="mailto:yochanavadlakonda@gmail.com?subject=Contacting%20from%20the%20portfolio&body=hey%20yochana%2C%0D%0A">Contact me</a>
             </div>
         </div>
+        {% include 'footer.html' %}
     </body>
 </html>
