--- a/templates/home.html
+++ b/templates/home.html
@@ -26,10 +26,9 @@
             </div>
             <div>
                 <h2 class="text-center" mt-2 mb-4>Skills</h2>
-                <p>{% for skill in Skillset %}
-                    
+                <p>{% for skill in Skills %}
                     {%include "skills.html" %}
-    
+                    
                     {% endfor %}
                 </p>
             </div>
