--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,8 +1,11 @@
-<div style="margin-bottom: 16px;padding-bottom: 8px;"></div>
-    <div>
-         <div>
-         <h5 style="color: #800aab; margin-bottom: 4px;">{{Skills['title']}}</h5>
-         </div>
-         <div>{{Skills['set']}}</div>  
-    </div>
- </div>
+<div class="border-bottom row"style="margin-bottom: 16px;padding-bottom: 8px;">
+     <div class="col-10">
+          <div>
+          <h5 style="color: #800aab; margin-bottom: 4px;">{{skill['title']}}</h5>
+          </div>
+          <div>
+               {{skill['set']}}
+          </div>
+     </div>
+      
+  </div>
