--- a/templates/home.html
+++ b/templates/home.html
@@ -5,16 +5,21 @@
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 
 
     </head>
     <body>
+
         {% include 'nav.html' %}
        
         <div class="container">
-            <h1 class="text-center" mt-2 mb-4>Portfolio</h1>
-             <h2 class="text-center" mt-2 mb-4>About me</h2>
+            <h1 class="text-center" mt-2 mb-4>Hello there!</h1>
              <div class="row" style="margin-bottom: 16px;">
                 <div class="col-9">
              <p class="lead"> Aspiring Computer Science student specializing in AI and Robotics, passionate about data science and full-stack web development. I aim to solve complex problems with AI while building user-centric applications. Excited to collaborate and contribute to the tech world! #AI #DataScience #WebDevelopment #Robotics 
