--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary shadow-sm fixed-top bg-white">
+<nav class="navbar bg-body-tertiary shadow-sm fixed-top bg-black">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="/static/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
