--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,11 +1,7 @@
-<nav class="navbar bg-body-tertiary shadow-sm fixed-top bg-black">
+<nav class="navbar bg-body-tertiary shadow-sm" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/static/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      Yochana
+    Yochana Vadlakonda
     </a>
   </div>
 </nav>
-<div style="height: 56px">
-
-</div>
