--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><h6 class="nav-link px-2 text-body-secondary " style="color: rgb(255, 255, 255);">"Life is what happens when you’re busy making other plans.”</h6></li>
+        <li class="nav-item"><h6 class="nav-link px-2 text-body-secondary " style="color: #b82197;">"Life is what happens when you’re busy making other plans.”</h6></li>
       </ul>
       <p class="text-center text-body-secondary" style="color: aliceblue;">yochana </p>
     </footer>
